--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+.container {
+  margin: 0 auto;
+  text-align: center;
+  width: 600px;
+  height: 600px;
+}
 .header {
   text-align: center;
   font-size: 56px;
@@ -5,14 +11,27 @@
 .text {
   color: #000;
 }
+.box {
+  width: 250px;
+  height: 200px;
+  border: thin black solid;
+  display: inline-block
+}
 .checkbox {
   /* text-align: center; */
-  margin: 280px auto 0 auto !important;
-  height: 100vh;
+  /* margin: 280px auto 0 auto !important; */
+  /* height: 100vh; */
   float: right;
+  display: inline-block;
 }
 .checkbox2 {
-  margin: 280px auto 0 auto !important;
-  height: 100vh;
-  float: left;
+  /* margin: 280px auto 0 auto !important; */
+  /* height: 100vh; */
+  float: left; 
+
+
 }
+
+/* #price-results {
+  margin-bottom: 0px;
+} */
